# lgnpy

./: .gitignore  README.md  config.yml  environment.yml  run_LGNstatistics.py  setup.cfg  setup.py
CEandSC/: lgn_statistics.py
lgnpy/: run_LGNstatistics.py
lgnpy/CEandSC/: default_config.yml  lgn_fitter.ipynb  lgn_statistics.py  lgn_statistics_cuda.py
lgnpy/fitter/: fit_lgn.py  lgn_fitter.ipynb
notebooks/: lgnpy_parameters.ipynb  tutorial.ipynb
