[metadata]
name = lgnpy
version = 0.0.1
author = Niklas Müller
author_email = n.muller@uva.nl
description = LGN Statistics
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = False